@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Employee {
  -employeeId
  -name
  -address
  -phoneNumber
  -email
  -socCode
}

class OrganizationRole {
  -description
}

class SpecialistDoctor {
  -docIndexNumber
}

class Administrator {

}

class User{
  -name
  -email
  -password
}



Company "1" -- "*" Employee : employ  >
Company "1" -- "*" OrganizationRole : comprehends >
Employee "*" -- "1" OrganizationRole : plays >
Employee <|-- SpecialistDoctor
Employee "0..1" -- "1" User: relates to >
Administrator "1" -- "1..*" Employee: registers >
@enduml